--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,25 @@
 streamlit
 pandas
+numpy
 plotly
 matplotlib
 yfinance
 scikit-learn
+joblib
+CamembertTokenizer
+CamembertModel
+transformers
+torch
+torch.nn
+googleapiclient.discovery
+build
+google_auth_oauthlib.flow
+InstalledAppFlow
+google.auth.transport.requests
+Request
+youtube_transcript_api
+YouTubeTranscriptApi
+tqdm
+re
+os
+pickle
